# automation-feedz

./: README.md  pyproject.toml
robot/: .env  messages.txt  progress.py  robot.py  settings.py
